src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts.expected
-----------------
INPUT
----------------- 
/** @gqlField */
export function greeting(thing: IThing): string {
  return `Hello ${thing.name}!`;
}

/** @gqlInterface */
interface IThing {
  name: string;
  // Should have greeting added
}

/**
 * @gqlInterface
 */
interface IPerson extends IThing {
  name: string;
  // Should have greeting added
}

/** @gqlType */
class User implements IPerson, IThing {
  __typename: "User";
  name: string;
  // Should have greeting added
}

/** @gqlType */
class Admin implements IPerson, IThing {
  __typename: "Admin";
  name: string;
  // Should have greeting added
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:15:1 - error: Type IPerson must define one or more fields.

15 interface IPerson extends IThing {
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
16   name: string;
   ~~~~~~~~~~~~~~~
17   // Should have greeting added
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
18 }
   ~
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:2:1 - error: Interface field IThing.greeting expected but IPerson does not provide it.

2 export function greeting(thing: IThing): string {
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3   return `Hello ${thing.name}!`;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 }
  ~

  src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:15:1
    15 interface IPerson extends IThing {
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    16   name: string;
       ~~~~~~~~~~~~~~~
    17   // Should have greeting added
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    18 }
       ~
    Related location
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:28:1 - error: Type Admin must define one or more fields.

 28 class Admin implements IPerson, IThing {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 29   __typename: "Admin";
    ~~~~~~~~~~~~~~~~~~~~~~
... 
 31   // Should have greeting added
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 32 }
    ~
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:2:1 - error: Interface field IThing.greeting expected but Admin does not provide it.

2 export function greeting(thing: IThing): string {
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3   return `Hello ${thing.name}!`;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 }
  ~

  src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:28:1
     28 class Admin implements IPerson, IThing {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     29   __typename: "Admin";
        ~~~~~~~~~~~~~~~~~~~~~~
    ... 
     31   // Should have greeting added
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     32 }
        ~
    Related location
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:21:1 - error: Type User must define one or more fields.

 21 class User implements IPerson, IThing {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 22   __typename: "User";
    ~~~~~~~~~~~~~~~~~~~~~
... 
 24   // Should have greeting added
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 25 }
    ~
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:2:1 - error: Interface field IThing.greeting expected but User does not provide it.

2 export function greeting(thing: IThing): string {
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3   return `Hello ${thing.name}!`;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 }
  ~

  src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:21:1
     21 class User implements IPerson, IThing {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     22   __typename: "User";
        ~~~~~~~~~~~~~~~~~~~~~
    ... 
     24   // Should have greeting added
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     25 }
        ~
    Related location
